<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ytsample.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_ytBottomSheetFragment_to_navigation_download"
            app:destination="@id/navigation_download">
            <argument
                android:name="downloadData"
                app:argType="com.example.ytsample.entities.DownloadedData"
                app:nullable="true" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_download"
        android:name="com.example.ytsample.ui.downloads.DownloadsFragment"
        android:label="@string/title_downloads"
        tools:layout="@layout/downloads_fragment">
        <argument
            android:name="downloadData"
            app:argType="com.example.ytsample.entities.DownloadedData"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_video"
        android:name="com.example.ytsample.ui.video.VideosFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_videos">
        <action
            android:id="@+id/action_navigation_video_to_videoPlayFragment"
            app:destination="@id/videoPlayFragment" >
        <argument
            android:name="videoData"
            app:argType="com.example.ytsample.entities.video.Video"
            app:nullable="true" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/videoPlayFragment"
        android:name="com.example.ytsample.ui.video.VideoPlayFragment"
        android:label="VideoPlayFragment" >
        <argument
            android:name="videoData"
            app:argType="com.example.ytsample.entities.video.Video"
            app:nullable="true" />
        <action
            android:id="@+id/action_videoPlayFragment_to_navigation_video2"
            app:destination="@id/navigation_video"
            app:popUpTo="@id/navigation_video"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>